--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,12 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.card {
+  border-bottom: #282c34;
 }
